<resources>
    <string name="app_name">Car Wash</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="fail_to_get_data">Fail to get data</string>
    <string name="retry">Retry</string>
    <string name="new_account">Sign Up</string>
    <string name="full_name">Full name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="you_have_account_q">You have an account ?</string>
    <string name="sign_in">Sign In</string>
    <string name="dummy">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500</string>
    <string name="ok">Ok</string>
    <string name="reload">Reload</string>
    <string name="title">Title</string>
    <string name="by_app">By App</string>
    <string name="share_with">Share With</string>
    <string name="fail_to_register">Fail to register</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="password_confirm_not_match">Password confirm not match</string>
    <string name="enter_phone_number">Enter Phone number</string>
    <string name="valid_phone_number">Valid phone number</string>
    <string name="select_country_code">Select Country Code</string>
    <string name="enter_country_name_to_search">Enter country name or code to search</string>
    <string name="no_address">No Address</string>
    <string name="hello_in_wash_app">Hello in wash Car App</string>
    <string name="forget_password_q">Forget Password?</string>
    <string name="login">Login</string>
    <string name="not_have_account_q">Not Have Account?</string>
    <string name="forget_password">Forget Password</string>
    <string name="enter_mobile_number_to_reset_password">Enter mobile number to reset the  password</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_confirm_code_and_new_password">Enter confirm code and new password</string>
    <string name="confirm_code">Confirm Code</string>
    <string name="settings">Settings</string>
    <string name="success_send">Success Send</string>
    <string name="finish">Finish</string>
    <string name="success_send_question_will_replay_soon">Success send question, will replay to you soon</string>
    <string name="change_password">Change Password</string>
    <string name="rate_application">Rate App</string>
    <string name="sign_out">Sign out</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="save">Save</string>
    <string name="please_wait_register">Please wait register ...</string>
    <string name="please_enter_code_sent_mobile">please enter code the  sent to  your mobile</string>
    <string name="resend_confirm_code">Don\'t receive the code </string>
    <string name="confirm_now">Confirm Now</string>
    <string name="please_wait_sending">Please wait sending ...</string>
    <string name="resend">Resend</string>
    <string name="please_wait_login">"Please Wait to login "</string>
    <string name="confirm_account">Confirm Account</string>
    <string name="fail_confirm_account">Fail to confirm account</string>
    <string name="fail_to_reset_password">Fail to reset password</string>
    <string name="mobile_number_is_exist">The mobile number is used before</string>
    <string name="mobile_password_not_match">Mobile and password not match</string>
    <string name="please_wait_to_change_password">Please wait to change password ...</string>
    <string name="fail_to_change_password">Fail to change password</string>
    <string name="success_change_password">Success change password</string>
    <string name="current_password_wrong">Current password not correct</string>
    <string name="enter_fill_name">Enter Full Name</string>
    <string name="enter_age">Enter Date Birth</string>
    <string name="age_must_be_morethan">Age Must me  more than 18</string>
    <string name="orders">My Orders</string>
    <string name="about_app">About App</string>
    <string name="user">User</string>
    <string name="driver">Driver</string>
    <string name="service_provider">Service Provider</string>
    <string name="next">Next</string>
    <string name="you_now_register_as">You Now Register As</string>
    <string name="enter_your_destination">Enter Your Destination</string>
    <string name="numPassenger">Bus Capacity </string>
    <string name="enter_number_passenger">Enter Bus Capacity</string>
    <string name="select_location">Select Location</string>
    <string name="some_permission_denied">Some permission denied</string>
    <string name="my_location">My Location</string>
    <string name="open_gps">Open GPS</string>
    <string name="enable">Enable</string>
    <string name="mapKey" translatable="false">AIzaSyCs0UFdKgA3wb1_IUTmY6b5CgCoCNCBygo</string>
    <string name="select_your_location">Select Your Location</string>
    <string name="sucess_choose_location">Location save successfully</string>
    <string name="fail_to_save_location">fail to save location</string>
    <string name="edit_Location">Edit Location</string>
    <string name="edit">Edit</string>
    <string name="fail_to_change_status">Fail to change status</string>
    <string name="current_request">Current Orders</string>
    <string name="finshed_order">Finished Order</string>
    <string name="all_orders">All Orders</string>
    <string name="select_destination">Select Destination</string>
    <string name="select_driver">Choose the appropriate Bus </string>
    <string name="bus_model">Bus Model</string>
    <string name="bus_number">Bus Number</string>
    <string name="enter_bus_color">Enter Bus Color</string>
    <string name="enter_bus_model">Enter Bus Model</string>
    <string name="enter_bus_number">Enter Bus Number</string>
    <string name="bus_color">Bus Color</string>
    <string name="confirm_request">Confirm Request</string>
    <string name="save_destination">Save Destination</string>
    <string name="save_location">Save Location</string>
    <string name="destination_location">Destination Location</string>
    <string name="accept">accept</string>
    <string name="reject">Reject</string>
    <string name="rejecttion">Rejected</string>
    <string name="sucess_change_satus">Success</string>
    <string name="change_order_status">Change Order Status</string>
    <string name="accepted">Accepted</string>
    <string name="driver_location">Driver Location</string>
    <string name="complete_order">Complete Order</string>
    <string name="fail_to_order">Fail to order</string>
    <string name="make_order">Make Order</string>
    <string name="please_wait_to_make_order">Please wait to make the order</string>
    <string name="make_order_sucess">Make Order Success</string>
    <string name="no_order">No Order</string>
    <string name="pending">Pending</string>
    <string name="date_birth">Date Birth</string>
    <string name="update_profile">Update Profile</string>
    <string name="success_edit">Success Edit</string>
    <string name="fail_to_edit">fail to edit</string>
    <string name="pay">Pay</string>
    <string name="payWay">Pay Way</string>
    <string name="payment">Payment</string>
    <string name="succes_pay">Paid Successfully</string>
    <string name="address">Address</string>
    <string name="ENTER_EMAIL">Enter Email</string>
    <string name="enter_vaild_email">Enter Valid Email</string>
    <string name="email">Email</string>
    <string name="sign_in_with_email">Sign in by email</string>
    <string name="sign_in_with_mobile">Sign In by Mobile</string>
    <string name="fail_to_sign_in">Fail to sign in</string>
    <string name="manage_drivers">Manage Drivers</string>
    <string name="edit_driver">Edit Driver</string>
    <string name="invalid_mobile">Invalid Mobile</string>
    <string name="add_driver">Add Driver</string>
    <string name="please_wait_to_add_driver">Please wait to add driver</string>
    <string name="success_add_driver">Success add driver</string>
    <string name="mobile_number_used_before">Mobile number used before</string>
    <string name="fail_to_add_driver">Fail to add driver</string>
    <string name="account_active">Account Active</string>
    <string name="send">Send</string>
    <string name="new_driver">New Driver</string>
    <string name="no_drivers">No Drivers</string>
    <string name="name_key">Name :</string>
    <string name="mobile_key">Mobile:</string>
    <string name="bus_number_key">Bus Number:</string>
    <string name="bus_model_key">Bus Model:</string>
    <string name="years">Year</string>
    <string name="user_info">User Info</string>
    <string name="bus_info">Bus Info</string>
    <string name="bus_name">Bus Name</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="enter_bus_name">Enter bus name</string>
    <string name="success_edit_driver">Success edit driver</string>
    <string name="fail_to_send">Fail to send</string>
    <string name="want_delete_driver">Do you want to delete driver?</string>
    <string name="delete">Delete</string>
    <string name="cancel2">Cancel</string>
    <string name="success_delete_driver">Success delete driver</string>
    <string name="delete_driver">Delete Driver</string>
    <string name="description">Description</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="customer">Customer</string>
    <string name="car_wash">Car wash</string>
    <string name="announcements">Announcements</string>
    <string name="view_all">View All</string>
    <string name="car_near_you">Car Wash Near You</string>
    <string name="best_rate_car">Best Rated Car Wash </string>
    <string name="Details">Details</string>
    <string name="request">request</string>
    <string name="email_exist">Email is used before</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_desc">Enter Describtion</string>
    <string name="enter_start_time">Enter startTime</string>
    <string name="enter_end_time">Enter endTime</string>
    <string name="invalid_input">Invalid input</string>
    <string name="mobile">Mobile</string>
    <string name="invalid_confirm_password">Invalid confirm password</string>
    <string name="please_select_your_location">Please select your location</string>
    <string name="categories">Categories</string>
    <string name="please_wait_get_location">Please wait get location</string>
    <string name="want_signout">Do you want to sign out ?</string>
    <string name="add_category">Add Category</string>
    <string name="category_name">Categorey Name</string>
    <string name="reviews">Reviews</string>
    <string name="car_name">Car Name</string>
    <string name="car_type">Car type</string>
    <string name="carModel">Car Model</string>
    <string name="plateNumber">plateNumber</string>
    <string name="choose_services">Choose services</string>
    <string name="about">About</string>
    <string name="success_add_category">Success add category</string>
    <string name="fail_to_add_category">Fail to add category</string>
    <string name="no_categories">No Categories</string>
    <string name="send_oder">Send Order</string>
    <string name="on_going">On going</string>
    <string name="complete">Completed</string>
    <string name="selected_car">Selected Car</string>
    <string name="service_selected">Service Selected</string>
    <string name="total_price">Total Price</string>
</resources>