<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/registerLY"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/_20sdp">

            <ImageView
                android:id="@+id/loginHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/_5sdp"
                app:srcCompat="@drawable/ic_login_icon" />

            <com.washcar.app.spichalViews.STextViewBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/_8sdp"
                android:text="@string/new_account"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_15ssp" />

            <com.washcar.app.spichalViews.STextView
                android:id="@+id/helloLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/_15sdp"
                android:text="@string/hello_in_wash_app"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_13ssp"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/_20sdp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="@dimen/_14sdp"
                android:paddingTop="@dimen/_7sdp"
                android:paddingEnd="@dimen/_14sdp"
                android:paddingBottom="@dimen/_7sdp">


                <com.washcar.app.spichalViews.STextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_3sdp"
                    android:text="@string/you_now_register_as"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_12ssp" />

                <com.washcar.app.spichalViews.STextViewBold
                    android:id="@+id/userTypeTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user"
                    android:textColor="@color/tabColor1"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold" />

            </LinearLayout>

            <com.washcar.app.spichalViews.STextInputLayout
                android:id="@+id/fullNameInput"
                style="@style/TextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:hint="@string/full_name"
                app:layout_constraintTop_toBottomOf="@id/helloLabel">

                <com.washcar.app.spichalViews.SEditText
                    android:id="@+id/NameTxt"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />

            </com.washcar.app.spichalViews.STextInputLayout>

            <com.washcar.app.spichalViews.STextInputLayout
                android:id="@+id/emailInput"
                style="@style/TextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:hint="@string/email"
                app:layout_constraintTop_toBottomOf="@id/helloLabel">

                <com.washcar.app.spichalViews.SEditText
                    android:id="@+id/emailTxt"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />

            </com.washcar.app.spichalViews.STextInputLayout>


            <LinearLayout
                android:id="@+id/busLy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <com.washcar.app.spichalViews.STextInputLayout
                    android:id="@+id/busNumberInput"
                    style="@style/TextInputStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:hint="@string/bus_number">

                    <com.washcar.app.spichalViews.SEditText
                        android:id="@+id/busNumberTxt"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.washcar.app.spichalViews.STextInputLayout>

                <com.washcar.app.spichalViews.STextInputLayout
                    android:id="@+id/busModelInput"
                    style="@style/TextInputStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:hint="@string/bus_model">

                    <com.washcar.app.spichalViews.SEditText
                        android:id="@+id/busModelTxt"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.washcar.app.spichalViews.STextInputLayout>

                <com.washcar.app.spichalViews.STextInputLayout
                    android:id="@+id/busColorInput"
                    style="@style/TextInputStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:hint="@string/bus_color">

                    <com.washcar.app.spichalViews.SEditText
                        android:id="@+id/busColorTxt"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />
                </com.washcar.app.spichalViews.STextInputLayout>

                <com.washcar.app.spichalViews.STextInputLayout
                    android:id="@+id/numSeatInput"
                    style="@style/TextInputStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:hint="@string/numPassenger">

                    <com.washcar.app.spichalViews.SEditText
                        android:id="@+id/numSeatTxt"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />
                </com.washcar.app.spichalViews.STextInputLayout>


            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="center_vertical"
                android:layoutDirection="ltr"
                android:orientation="horizontal">


                <com.washcar.app.spichalViews.STextInputLayout
                    android:id="@+id/mobileInput"
                    style="@style/TextInputStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:hint="@string/mobile_number"
                    android:nextFocusForward="@id/passwordTxt"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.washcar.app.spichalViews.SEditText
                        android:id="@+id/mobileTxt"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:nextFocusForward="@id/passwordTxt" />

                </com.washcar.app.spichalViews.STextInputLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>


            <com.washcar.app.spichalViews.STextInputLayout
                android:id="@+id/passwordInput"
                style="@style/TextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:hint="@string/password"
                app:passwordToggleEnabled="true">

                <com.washcar.app.spichalViews.STextInputEditText
                    android:id="@+id/passwordTxt"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.washcar.app.spichalViews.STextInputLayout>

            <com.washcar.app.spichalViews.STextInputLayout
                android:id="@+id/confirmPasswordInput"
                style="@style/TextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:hint="@string/confirm_password"
                app:passwordToggleEnabled="true">

                <com.washcar.app.spichalViews.STextInputEditText
                    android:id="@+id/confirmPasswordTxt"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.washcar.app.spichalViews.STextInputLayout>


            <com.washcar.app.spichalViews.STextInputLayout
                android:id="@+id/addressInput"
                style="@style/TextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:hint="@string/address"
                app:layout_constraintTop_toBottomOf="@id/helloLabel">

                <com.washcar.app.spichalViews.SEditText
                    android:id="@+id/addressTxt"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />

            </com.washcar.app.spichalViews.STextInputLayout>


            <com.washcar.app.spichalViews.STextInputLayout
                android:id="@+id/descInput"
                style="@style/TextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:hint="@string/description"
                app:layout_constraintTop_toBottomOf="@id/helloLabel">

                <com.washcar.app.spichalViews.SEditText
                    android:id="@+id/descTxt"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />

            </com.washcar.app.spichalViews.STextInputLayout>
            <com.loopeer.shadow.ShadowView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_50sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                app:backgroundColor="@color/white"
                app:cornerRadius="@dimen/round_corner_thin"
                app:shadowColor="@color/colorPrimaryTrans"
                app:shadowMarginBottom="@dimen/_8sdp"
                app:shadowRadius="@dimen/_8sdp">

                <com.washcar.app.spichalViews.STextViewBold
                    android:id="@+id/registerBtn"
                    style="@style/primaryBtnStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textColor="@color/white" />


            </com.loopeer.shadow.ShadowView>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/_40sdp"
                android:orientation="horizontal">

                <com.washcar.app.spichalViews.STextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:text="@string/you_have_account_q"
                    android:textColor="@color/colorAccent2"
                    android:textSize="@dimen/_12ssp" />

                <com.washcar.app.spichalViews.STextView
                    android:id="@+id/loginBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/sign_in"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>


            <com.washcar.app.spichalViews.STextView
                android:id="@+id/yearTxt"
                style="@style/editTextStyle"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                />
            <com.washcar.app.spichalViews.STextView
                android:id="@+id/dayTxt"
                style="@style/editTextStyle"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />
            <com.washcar.app.spichalViews.STextView
                android:id="@+id/monthTxt"
                style="@style/editTextStyle"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>